# multithread_reading

./: CMakeLists.txt  README.md  StatAggregator.cpp  StatAggregator.h  StatElement.cpp  StatElement.h  StatGatherer.cpp  StatGatherer.h  makefile  multithread_reading.cpp  mutlithread_reading.cpp
